// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHighlight behavior loose matching matches strings with different casing 1`] = `
<span>
  different 
  <mark
    class="ouiMark"
  >
    case
  </mark>
   match
</span>
`;

exports[`OuiHighlight behavior matching applies to all matches 1`] = `
<span>
  <mark
    class="ouiMark"
  >
    match
  </mark>
   
  <mark
    class="ouiMark"
  >
    match
  </mark>
   
  <mark
    class="ouiMark"
  >
    match
  </mark>
</span>
`;

exports[`OuiHighlight behavior matching only applies to first match 1`] = `
<span>
  <mark
    class="ouiMark"
  >
    match
  </mark>
   match match
</span>
`;

exports[`OuiHighlight behavior strict matching doesn't match strings with different casing 1`] = `
<span>
  different case match
</span>
`;

exports[`OuiHighlight is rendered 1`] = `
<span
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
>
  value
</span>
`;
